# mle-bench-purple

./: .dockerignore  .gitignore  Dockerfile  README.md  amber-manifest.json5  pyproject.toml
.github/workflows/: docker-publish.yml
src/: agent.py  executor.py  interpreter.py  llm.py  ml_agent.py  pipeline.py  server.py
tests/: conftest.py  test_agent.py  test_executor.py  test_interpreter.py  test_interpreter_extra.py  test_llm.py  test_ml_agent.py  test_pipeline_smoke.py  test_server.py  test_submission.py
