[project]
name = "mle-bench-purple"
version = "0.1.0"
description = "Purple agent for MLE-Bench on AgentBeats (tabular baseline, no LLM)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a-sdk[http-server]>=0.3.20",
    "uvicorn>=0.38.0",
    "python-dotenv>=1.0.0",
    "pandas>=2.2.0",
    "scikit-learn>=1.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.28.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]
